--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 
 :root {
     --bg-color: #f4f6fA;
+    --purple: #a729f5
+    --white: #ffff
     --bg-mobile: url(./assents/imagens/pattern-background-mobile-ligth.svg);
+
 }
 
 body {
@@ -14,4 +17,41 @@ body {
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+header {
+    padding: 16px 24px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.tema {
+    padding: 8px 0px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.tema img {
+    width: 16px;
+}
+
+.tema button {
+    height: 20px;
+    width: 32px;
+    background: var(--purple);
+    border: 0;
+    border-radius: 999px;
+    padding: 4px;
+}
+
+.tema button div {
+    background: white;
+    width: 12px;
+    height: 12px;
+    border-radius: 999px;
+}
+
+.main {
+    padding: 32px 24px;
 }
