--- a/style.css
+++ b/style.css
@@ -1,83 +1,113 @@
-* {
+*{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
     font-family: "Rubik", sans-serif;
-    -webkik-font-smoothing:antialiased;
+    -webkit-font-smoothing: cover;
 }
-
 :root {
-    --bg-color: #f4f6fA;
+    --bg-color: #f4f6fa;
     --purple: #a729f5;
     --primary-text-color: #313e51;
-    --secundary-text-color: #626c7f
-    --white: #ffff;
-    --bg-mobile: url(./assents/imagens/pattern-background-mobile-ligth.svg);
+    --secondary-text-color: #626c7f;
+    --button-bg: #fff;
+    --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
+    --bg-html: #fff1e9;
+    --bg-css: #e0fdef;
+    --bg-javascript: #ebf0ff;
+    --bg-acessibilidade: #f6e7ff;
+    --white: #fff;
+    --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
 
 }
-
 body {
-    height: 100svh;
+    height: 100vh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 header {
     padding: 16px 24px;
     display: flex;
     justify-content: flex-end;
 }
-
 .tema {
-    padding: 8px 0px;
+    padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
 }
-
 .tema img {
     width: 16px;
 }
-
 .tema button {
-    height: 20px;
     width: 32px;
+    height: 20px;
     background: var(--purple);
     border: 0;
     border-radius: 999px;
     padding: 4px;
 }
-
 .tema button div {
-    background: white;
+    background: var(--white);
     width: 12px;
     height: 12px;
     border-radius: 999px;
 }
-
-.main {
+main {
     padding: 32px 24px;
 }
-
-.bias_vindas{
+.boas_vindas {
     margin-bottom: 40px;
 }
-
-.boa_vindas h1 {
+.boas_vindas h1 {
     font-size: 40px;
     font-weight: 300;
-    color: var( --primary-text-color);
-    margin-bottom: 16px;
+    color: var(--primary-text-color);
+    margin-bottom: 16px ;
 }
-
-.boa_vindas h1 strong {
+.boas_vindas h1 strong {
     font-weight: 500;
 }
-
-.boa_vindas p{
-    color: var(--secundary-text-color);
+.boas_vindas p {
+    color: var(--secondary-text-color);
     font-size: 14px;
     line-height: 150%;
     font-style: italic;
+}
+}
+
+.assuntos {
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    gap: 12px
+}
+
+.assuntos button {
+    border: none;
+    background: var(--button-bg);
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 12px;
+    border-radius: 12px;
+    box-shadow: var(--shadow);
+}
+
+.botao_html div {
+    background: var(--bg-html);
+}
+
+.botao_css div {
+    background: var(--bg-css);
+
+}
+
+.botao_javascript div {
+    background: var(--bg-javascript);
+}
+
+.botao_acessibilidade div {
+    background: var(--bg-acessibilidade);
 }
