--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@
     --white: #fff;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg)
-
-
+   
 }
 body {
     height: 100vh;
@@ -42,9 +41,11 @@ header {
 .tema img {
     width: 16px;
 }
+
 .tema button {
     width: 32px;
     height: 20px;
+    width: 32px;
     background: var(--purple);
     border: 0;
     border-radius: 999px;
@@ -116,20 +117,33 @@ main {
 .botao_acessibilidade div {
     background: var(--bg-acessibilidade);
 }
-
 @media(min-width: 1100px){
     body {
         background: var(--bg-desktop) var(--bg-color);
         background-size: cover;
         background-repeat: no-repeat;
     }
-
     header {
         margin-block: 81px;
     }
 
+    .tema {
+        gap: 16px
+    }
+
     .tema img {
 
+        width: 24px;
+    }
+
+    .tema button {
+        width: 48px;
+        height: 28px;
+    }
+
+    .tema button div {
+        width: 20px;
+        height: 20px;
     }
 
     main {
@@ -137,31 +151,24 @@ main {
         max-width: 1160px;
         margin-inline: auto;
     }
-
     section {
         width: 100%;
     }
-
     .boas_vindas h1 {
         font-size: 64px;
         margin-bottom: 48px;
-
     }
-
     .boas_vindas p {
         font-size: 20px;
     }
-
     .assuntos {
         gap: 24px
     }
-
     .assuntos button {
         font-size: 28px;
         padding: 20px;
         gap: 32px
     }
-
     .assuntos button div {
         width: 56px;
         height: 56px;
