--- a/style.css
+++ b/style.css
@@ -19,8 +19,20 @@
     --white: #fff;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg)
-   
+
 }
+
+body.escuro {
+    --bg-color: #313e51;
+    --bg-mobile: url(./assets/images/pattern-background-mobile-dark.svg);
+    --bg-desktop: url(./assets/images/pattern-background-desktop-dark.svg);
+    --primary-text-color: #fff;
+    --secondary-text-color: #abc1e1;
+    --button-bg: #3b4d66;
+    --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
+
+}
+
 body {
     height: 100vh;
     background: var(--bg-mobile) var(--bg-color);
@@ -41,9 +53,7 @@ header {
 .tema img {
     width: 16px;
 }
-
 .tema button {
-    width: 32px;
     height: 20px;
     width: 32px;
     background: var(--purple);
@@ -126,26 +136,20 @@ main {
     header {
         margin-block: 81px;
     }
-
     .tema {
         gap: 16px
     }
-
     .tema img {
-
         width: 24px;
     }
-
     .tema button {
         width: 48px;
         height: 28px;
     }
-
     .tema button div {
         width: 20px;
         height: 20px;
     }
-
     main {
         display: flex;
         max-width: 1160px;
