--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -8,6 +8,7 @@
 :root {
     --bg-color: #f4f6fa;
     --purple: #a729f5;
+    --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
     --button-bg: #fff;
@@ -17,6 +18,8 @@
     --bg-javascript: #ebf0ff;
     --bg-acessibilidade: #f6e7ff;
     --white: #fff;
+    --green: #26d782;
+    --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg)
    
@@ -116,16 +119,12 @@ main {
     background: var(--purple);
     border-radius: 999px;
 }
-
-
 .alternativas form {
     display: flex;
     flex-direction: column;
     gap: 12px;
     margin-bottom: 12px;
 }
-
-
 .alternativas label {
     display: block;
     background: var(--button-bg);
@@ -135,23 +134,46 @@ main {
     border-radius: 12px;
     box-shadow: var(--shadow);
     color: var(--primary-text-color);
+    cursor: pointer;
+}
+
+.alternativas label:hover {
+    & span {
+        background: var(--bg-acessibilidade);
+        color: var(--purple);
+    }
 }
 
 .alternativas label:has(input:checked){
-
+    outline: 3px solid var(--purple);
+    & span {
+        background: var(--purple);
+        color: var(--white)
+    }
 }
-
+.alternativas label#correta{
+    outline: 3px solid var(--green);
+    & span {
+       background: var(--green);
+       color: var(--white);
+    }
+}
+.alternativas label#errada{
+    outline: 3px solid var(--red);
+    & span {
+       background: var(--red);
+       color: var(--white);
+    }
+}
 .alternativas input {
     display: none;
 }
-
 .alternativas div {
     display: flex;
     align-items: center;
     gap: 16px;
-
+    
 }
-
 .alternativas div span {
     display: block;
     width: 40px;
@@ -164,7 +186,6 @@ main {
     color: var(--secondary-text-color);
     flex-shrink: 0;
 }
-
 .alternativas button {
     padding: 16px;
     border-radius: 12px;
@@ -174,12 +195,36 @@ main {
     width: 100%;
     font-size: 18px;
     font-weight: 500;
+    transition: background 0.3s;
+}
+
+.alternativas button:hover {
+    background: var(--purple-hover);
+    cursor: pointer;
 }
 
 
 
 
+
+
+
+
+
 @media(min-width: 1100px){
+    header {
+        margin-block: 81px;
+        max-width: 1160px;
+        margin-inline: auto;
+    }
+    .assunto_icone {
+        width: 56px;
+        height: 56px;
+        padding: 8px;
+    }
+    .assunto h1 {
+        font-size: 28px;
+    }
     .tema {
         gap: 16px
     }
@@ -193,5 +238,52 @@ main {
     .tema button div {
         width: 20px;
         height: 20px;
+    }
+    main {
+        max-width: 1160px;
+        margin-inline: auto;
+        display: flex;
+        gap: 130px
+    }
+    
+    section {
+        width: 100%;
+        
+    }
+    .pergunta {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .pergunta p {
+        font-size: 20px;
+        line-height: 30px;
+        margin-bottom: 27px;
+    }
+    .pergunta h2 {
+        font-size: 36px;
+        line-height: 42px;
+    }
+    .alternativas form {
+        gap: 24px;
+        margin-bottom: 24px;
+    }
+    .alternativas label {
+        font-size: 22px;
+        padding: 18px 20px;
+        border-radius: 24px;
+
+    }
+
+    .alternativas div {
+        gap: 32px;
+    }
+    .alternativas div span {
+        width: 56px;
+        height: 56px;
+        font-size: 28px;
+    }
+    .alternativas button {
+        font-size: 22px;
     }
 }
