--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -7,6 +7,8 @@
 }
 :root {
     --bg-color: #f4f6fa;
+    --bg-span: #f4f6fa;
+    --color-span: #626c7f;
     --purple: #a729f5;
     --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
@@ -32,6 +34,7 @@ body.escuro {
     --secondary-text-color: #abc1e1;
     --button-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
+    --color-span: #313e51;
     
 }
 body {
@@ -136,14 +139,12 @@ main {
     color: var(--primary-text-color);
     cursor: pointer;
 }
-
 .alternativas label:hover {
     & span {
         background: var(--bg-acessibilidade);
         color: var(--purple);
     }
 }
-
 .alternativas label:has(input:checked){
     outline: 3px solid var(--purple);
     & span {
@@ -178,12 +179,12 @@ main {
     display: block;
     width: 40px;
     height: 40px;
-    background: var(--bg-color);
+    background: var(--bg-span);
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--secondary-text-color);
+    color: var(--color-span);
     flex-shrink: 0;
 }
 .alternativas button {
@@ -197,21 +198,19 @@ main {
     font-weight: 500;
     transition: background 0.3s;
 }
-
 .alternativas button:hover {
     background: var(--purple-hover);
     cursor: pointer;
 }
 
 
-
-
-
-
-
-
-
 @media(min-width: 1100px){
+    body {
+        background: var(--bg-desktop) var(--bg-color);
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
     header {
         margin-block: 81px;
         max-width: 1160px;
@@ -272,9 +271,7 @@ main {
         font-size: 22px;
         padding: 18px 20px;
         border-radius: 24px;
-
     }
-
     .alternativas div {
         gap: 32px;
     }
